Fix FightList group header to work in Dark Mode.

--- a/src/akkd/List/List.module.css
+++ b/src/akkd/List/List.module.css
@@ -14,10 +14,6 @@
 	min-height: calc(1.5 * gutter);
 }
 
-.inverted {
-	color: white;
-}
-
 .rounded {
 	border-radius: .3rem;
 }
